deploy connect test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Rezta20.github.io/2-seasons",
+  "homepage": "https://rezta20.github.io/2-seasons",
   "name": "2-seasons",
   "version": "0.1.0",
   "private": true,
